--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
 
-    <div class="container" id="home">
+    <div class="container" >
       <div class="circle-container">
         <div class="circle">
           <button class="close">
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <div class="content">
+      <div class="content" id="home">
         <h1>Amazing Article</h1>
         <small> <i> Ahmed Hussien </i></small>
         <h3>The Essence of Web Development</h3>
