--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
 
-    <div class="container" >
+    <div class="container">
       <div class="circle-container">
         <div class="circle">
           <button class="close">
@@ -83,8 +83,8 @@
             </div>
           </li>
           <li>
-            <span class="accordion">CSS<i class="fa-regular  fa-rectangle-xmark "></i></span>
-            <div class="panel">
+            <span class="accordion active">CSS<i class="fa-regular  fa-rectangle-xmark "></i></span>
+            <div class="panel " style="display: block;">
               <p> CSS (Cascading Style Sheets): CSS is used to style the appearance of
                 HTML elements on a
                 webpage, including layout,
@@ -134,7 +134,7 @@
             </div>
           </li>
           <li>
-            <span class="accordion">Learn More About <i class="fa-regular  fa-rectangle-xmark "></i></span>
+            <span class="accordion ">Learn More About <i class="fa-regular  fa-rectangle-xmark "></i></span>
             <div class="panel">
               <p>
               <ul class="learn-More">
@@ -187,8 +187,8 @@
               class="fa-brands fa-github"></i></a>
         </div>
       </div>
-    </div>
 
+    </div>
     <nav>
       <ul>
         <li class="close"><i class="fas fa-home"></i><a href="#home"> Home</a></li>
@@ -197,6 +197,7 @@
         <li class="close"><i class="fa-solid fa-rotate-left"></i><a href="#home"> Back</a></li>
       </ul>
     </nav>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"
       integrity="sha512-GWzVrcGlo0TxTRvz9ttioyYJ+Wwk9Ck0G81D+eO63BaqHaJ3YZX9wuqjwgfcV/MrB2PhaVX9DkYVhbFpStnqpQ=="
